clean cornerstone + checklist POC additions
clean cornerstone with checklist POC additions

--- a/templates/components/products/add-to-cart.html
+++ b/templates/components/products/add-to-cart.html
@@ -45,3 +45,5 @@
             value="{{#if product.pre_order}}{{lang 'products.pre_order'}}{{else}}{{lang 'products.add_to_cart'}}{{/if}}">
     </div>
 {{/or}}
+
+<input class="button button--secondary" id="addProductToChecklist" value="Add to Checklist" data-productid="{{product.id}}" data-qty="" />
