--- a/templates/components/products/card.html
+++ b/templates/components/products/card.html
@@ -61,6 +61,8 @@
                         {{/if}}
                     {{/if}}
                 {{/or}}
+
+                <input class="button button--small card-figcaption-button addProductToChecklistCard" value="Add to Checklist" data-productid="{{id}}" />
             </div>
         </figcaption>
     </figure>
