--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -38,6 +38,7 @@
 
         {{> components/common/header }}
         {{> components/common/body }}
+        {{> components/common/checklist }}
         {{> components/common/footer }}
 
         <script>window.__webpack_public_path__ = "{{cdn 'assets/dist/'}}";</script>
